# VisCoIN-Next

./: .gitignore  .gitmodules  README.md  conda.yml  example.py  flake.nix  main.py  pyproject.toml
.github/workflows/: lint.yml
viscoin/captions/: cub.py  cub.txt
viscoin/cli/: amplify.py  amplify_pca.py  concept_heatmaps.py  concept_labels.py  concepts.py  diffusion.py  logs.py  test.py  to_pickle.py  train.py  training.py  utils.py  visualization.py
viscoin/datasets/: cub.py  ffhq.py  ffhq_split.txt  funnybirds.py  transforms.py  utils.py
viscoin/models/: classifiers.py  clip.py  clip_adapter.py  concept2clip.py  concept2gan.py  concept_extractors.py  explainers.py  gan.py  hyperstyle.py  utils.py
viscoin/testing/: classifiers.py  clip_adapter.py  concept2clip.py  concept2gan.py  concept_label_metric.py  concepts.py  viscoin.py
viscoin/training/: classifiers.py  clip_adapter.py  concept2clip.py  concept2gan.py  losses.py  schedulers.py  utils.py  viscoin.py
viscoin/utils/: cli.py  dataclasses.py  gradcam.py  images.py  logging.py  maths.py  metrics.py  plotting.py  types.py
