[project]
name = "viscoin-next"
version = "0.1.0"
description = "VisCoIN model implementation using PyTorch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.2.1",
  "ipykernel>=6.29.5",
  "kagglehub>=0.3.12",
  "lpips>=0.1.4",
  "matplotlib>=3.10.3",
  "ninja>=1.11.1.4",
  "numpy>=2.3.0",
  "open-clip-torch>=2.32.0",
  "opencv-python>=4.11.0.86",
  "pandas>=2.3.0",
  "pillow>=11.2.1",
  "scikit-learn>=1.7.0",
  "torch>=2.7.1",
  "torchvision>=0.22.1",
  "tqdm>=4.67.1",
  "transformers>=4.52.4",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"        # Optional: align with Black's formatting style
skip = ["stylegan2_ada"]
